# dse-qwen2-2b-mrl-v1-demo

./: LICENSE  README.md  bear.json  cat.json  compare.py  embeddings.json  empty-image.py  empty_image.json  main.py  panda.json  pyproject.toml  testing.txt
