[project]
name = "vision-model-temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "bitsandbytes>=0.45.3",
    "flash-attn",
    "qwen-vl-utils>=0.0.10",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers==4.49.0",
]
